--- a/test/testcases/test-color-names.html
+++ b/test/testcases/test-color-names.html
@@ -168,6 +168,6 @@ var colors = [
   'yellow',
   'yellowgreen'];
 
-document.timeline.createPlayer(new Animation(document.body,
+document.timeline.play(new Animation(document.body,
     {'background-color': colors}, colors.length * 2 / 60));
 </script>
