--- a/test/testcases/test-compositing-order.html
+++ b/test/testcases/test-compositing-order.html
@@ -69,7 +69,7 @@ var noop = {color: "red"};
 // because the second animation has a later start time, it should be composited
 // second, so the div should end up on the left.
 var target1 = document.getElementById("target1");
-var player = document.timeline.createPlayer(new ParGroup([
+var player = document.timeline.play(new ParGroup([
   new ParGroup([
     new Animation(target1, leftToRight, 1.0),
   ]),
@@ -92,7 +92,7 @@ setTimeout(function() {
 // rate of 4.0, so the effective start time of its child animation is 2.0. So
 // the the div should end up on the left at time 3.0.
 var target2 = document.getElementById("target2");
-var player = document.timeline.createPlayer(new ParGroup([
+var player = document.timeline.play(new ParGroup([
   new Animation(target2, leftToRight, 1.0),
   new SeqGroup([
     new Animation(target1, noop, 8.0),
@@ -109,10 +109,10 @@ setTimeout(function() {
 
 // Test compositing order follows Player start time order.
 var target3 = document.getElementById("target3");
-var player1 = document.timeline.createPlayer(
+var player1 = document.timeline.play(
   new Animation(target3, {left: ["100px", "200px"]}, 1.0));
 player1.startTime += 1.0;
-var player2 = document.timeline.createPlayer(
+var player2 = document.timeline.play(
   new Animation(target3, {left: ["100px", "1000px"]}, 2.0));
 
 player1.paused = true;
@@ -126,7 +126,7 @@ setTimeout(function() {
 
 // Test compositing order follows tree order.
 var target4 = document.getElementById("target4");
-var player = document.timeline.createPlayer(new ParGroup([
+var player = document.timeline.play(new ParGroup([
   new Animation(target4, {left: ["100px", "1000px"]}, 1.0),
   new SeqGroup([
     new Animation(target4, {left: ["100px", "1000px"]}, 1.0),
