--- a/test/testcases/test-document-timeline.html
+++ b/test/testcases/test-document-timeline.html
@@ -83,7 +83,7 @@ check(document.timeline.currentTime, null,
 
 // Test that Player.currentTime is null before the document load event.
 var animation = new Animation(document.getElementById("anim"), {left: "100px"});
-check(document.timeline.createPlayer(animation).currentTime, null,
+check(document.timeline.play(animation).currentTime, null,
     "Player.currentTime should be null before document load event");
 
 // Test that document.timeline.currentTime is constant within a JavaScript
