--- a/test/testcases/test-iterations-fill.html
+++ b/test/testcases/test-iterations-fill.html
@@ -142,6 +142,6 @@ for (var i = 0; i < fillModes.length; i++) {
   }
 }
 for (var j = 0; j < divs.length; j++) {
-  document.timeline.createPlayer(groups[j]);
+  document.timeline.play(groups[j]);
 }
 </script>
