--- a/test/testcases/test-repeated-pause.html
+++ b/test/testcases/test-repeated-pause.html
@@ -58,7 +58,7 @@ var check = function(actual, expected, failureMessage) {
   }
 };
 
-var player = document.timeline.createPlayer(new Animation(
+var player = document.timeline.play(new Animation(
     document.getElementById("anim"), {left: ["100px", "200px"]}, 1.0));
 
 // Test that repeatedly setting Player.paused to true does not affect the
