--- a/test/testcases/test-svg-anim.html
+++ b/test/testcases/test-svg-anim.html
@@ -33,6 +33,6 @@ limitations under the License.
 <script>
 var rect = document.querySelector(".anim")
 
-document.timeline.createPlayer(new Animation(rect, {x: "400px"}, 1));
+document.timeline.play(new Animation(rect, {x: "400px"}, 1));
 
 </script>
