--- a/demos/car-demo.html
+++ b/demos/car-demo.html
@@ -152,6 +152,6 @@
   new Animation(document.querySelector(".car"), {left: ["-500px", "10px"]}, {duration: 2, timingFunction: new TimingFunction("ease-out")}, sgroup);
 
   document.querySelector("#buttonA").addEventListener('mousedown', function() {
-    document.timeline.createPlayer(sgroup);
+    document.timeline.play(sgroup);
   }, false);
 </script>
