--- a/test/testcases/test-bounds.html
+++ b/test/testcases/test-bounds.html
@@ -64,7 +64,7 @@ var animFunc = {left: ["100px", "200px"]};
 // Test that the animation interval uses inclusive start and end bounds.
 var elem1 = document.getElementById("anim1");
 var player1 =
-    document.timeline.createPlayer(new Animation(elem1, animFunc, 1.0));
+    document.timeline.play(new Animation(elem1, animFunc, 1.0));
 player1.paused = true;
 player1.currentTime = 0.0;
 setTimeout(function() {
@@ -79,7 +79,7 @@ setTimeout(function() {
 
 // Test that startDelay is applied correctly.
 var elem2 = document.getElementById("anim2");
-var player2 = document.timeline.createPlayer(
+var player2 = document.timeline.play(
     new Animation(elem2, animFunc, {duration: 1.0, startDelay: 1.0}));
 player2.paused = true;
 player2.currentTime = 0;
