--- a/test/testcases/test-calc.html
+++ b/test/testcases/test-calc.html
@@ -110,26 +110,26 @@ completely cover the light red box when the animation has finished.
 
 var dt = document.timeline;
 
-dt.createPlayer(new Animation(document.querySelector(".outer"),
+dt.play(new Animation(document.querySelector(".outer"),
     {width: "800px"}, 2));
 
 // 50px -> 0px linear, 0% -> 50% (0px -> 400px quadratic)
-dt.createPlayer(new Animation(document.querySelector("#a"), {width: "50%"}, 2));
+dt.play(new Animation(document.querySelector("#a"), {width: "50%"}, 2));
 // 25% -> 50% (50px -> 400px quadratic)
-dt.createPlayer(new Animation(document.querySelector("#b"), {width: "50%"}, 2));
+dt.play(new Animation(document.querySelector("#b"), {width: "50%"}, 2));
 // 50px -> 400px linear
-dt.createPlayer(new Animation(document.querySelector("#c"),
+dt.play(new Animation(document.querySelector("#c"),
     {width: "400px"}, 2));
 // 25px -> 0px linear, 12.5% -> 50% (25px -> 400px quadratic)
-dt.createPlayer(new Animation(document.querySelector("#d"), {width: "50%"}, 2));
+dt.play(new Animation(document.querySelector("#d"), {width: "50%"}, 2));
 // 50px -> 100px linear, 0% -> 37.5% (0px -> 300px quadratic)
-dt.createPlayer(new Animation(document.querySelector("#e"),
+dt.play(new Animation(document.querySelector("#e"),
     {width: "-webkit-calc(37.5% + 100px)"}, 2));
 // 0px -> 100px linear, 25% -> 37.5% (50px -> 300px quadratic)
-dt.createPlayer(new Animation(document.querySelector("#f"),
+dt.play(new Animation(document.querySelector("#f"),
     {width: "-webkit-calc(37.5% + 100px)"}, 2));
 // 100px -> 100px linear, -25% -> 37.5% (-50px -> 300px quadratic)
-dt.createPlayer(new Animation(document.querySelector("#g"),
+dt.play(new Animation(document.querySelector("#g"),
     {width: "-webkit-calc(37.5% + 100px)"}, 2));
 
 </script>
