--- a/test/testcases/test-change-playback-rate.html
+++ b/test/testcases/test-change-playback-rate.html
@@ -38,7 +38,7 @@ limitations under the License.
 var a1 = new Animation(document.querySelector("#a"),
     {left: ["0px", "500px"]},
     {duration: 10, direction: 'alternating', iterationCount: Infinity});
-document.timeline.createPlayer(a1);
+document.timeline.play(a1);
 
 var a2 = new Animation(undefined,
     {sample: function(timeFraction, iteration, target) {
@@ -47,6 +47,6 @@ var a2 = new Animation(undefined,
       document.querySelector("#a").textContent = a1.timing.playbackRate;
     }},
     a1.timing.clone());
-document.timeline.createPlayer(a2);
+document.timeline.play(a2);
 
 </script>
