--- a/test/testcases/test-color.html
+++ b/test/testcases/test-color.html
@@ -61,11 +61,11 @@ All three boxes should end up the same color as the outline.
 
 var dt = document.timeline;
 
-dt.createPlayer(new Animation(document.querySelector("#a"),
+dt.play(new Animation(document.querySelector("#a"),
     {"background-color": ["red", "green"]}, 2));
-dt.createPlayer(new Animation(document.querySelector("#b"),
+dt.play(new Animation(document.querySelector("#b"),
     {"background-color": "rgb(0, 128, 0)"}, 2));
-dt.createPlayer(new Animation(document.querySelector("#c"),
+dt.play(new Animation(document.querySelector("#c"),
     {"background-color": [
       {offset: 0.25, value: "rgb(255, 0, 0)"},
       {offset: 0.75, value: "rgb(0, 0, 255)"}
