--- a/test/testcases/test-compositor.html
+++ b/test/testcases/test-compositor.html
@@ -39,22 +39,22 @@ var rect2 = document.querySelector(".anim2")
 
 var dt = document.timeline;
 
-dt.createPlayer(new Animation(rect, {x: ["0px", "400px"]}, 3));
-dt.createPlayer(new Animation(rect, {x: ["0px", "200px"], operation: 'add'},
+dt.play(new Animation(rect, {x: ["0px", "400px"]}, 3));
+dt.play(new Animation(rect, {x: ["0px", "200px"], operation: 'add'},
    {startDelay: 1, duration: 4}));
-dt.createPlayer(new Animation(rect, {x: ["0px", "200px"], operation: 'merge'},
+dt.play(new Animation(rect, {x: ["0px", "200px"], operation: 'merge'},
     {startDelay: 2, duration: 5}));
 
-dt.createPlayer(new Animation(rect2,
+dt.play(new Animation(rect2,
     {"-webkit-transform": ["translate(0px, 0px)", "translate(200px, 200px)"]},
     3));
-dt.createPlayer(new Animation(rect2,
+dt.play(new Animation(rect2,
     {"-webkit-transform": [
       "rotate(0deg) translate(0px, 0px)",
       "rotate(90deg) translate(100px, 0px)"
     ], operation: 'add'},
     {startDelay: 1, duration: 4}));
-dt.createPlayer(new Animation(rect2,
+dt.play(new Animation(rect2,
     {"-webkit-transform": [
       "translate(0px, 0px) rotate(0deg) translate(0px, 0px) scale(1, 1)",
       "translate(0px, 0px) rotate(0deg) translate(0px, 0px) scale(2, 2)"
