--- a/test/testcases/test-grouped-anim-func.html
+++ b/test/testcases/test-grouped-anim-func.html
@@ -33,7 +33,7 @@ limitations under the License.
 <script>
 var rect = document.querySelector(".anim");
 
-document.timeline.createPlayer(new Animation(rect,
+document.timeline.play(new Animation(rect,
     {x: "400px", y: ["300px", "200px"], width: ["100px", "20px", "50px"]}, 1));
 
 </script>
