--- a/test/testcases/test-length-units.html
+++ b/test/testcases/test-length-units.html
@@ -79,7 +79,7 @@ for (var j = 0; j < to.length; j++) {
 document.querySelector("table").innerHTML = table;
 
 for (var id in anims) {
-  document.timeline.createPlayer(
+  document.timeline.play(
       new Animation(document.querySelector(id), {width: anims[id]}, 2));
 }
 
