--- a/test/testcases/test-player.html
+++ b/test/testcases/test-player.html
@@ -66,21 +66,21 @@ var animation = new Animation(document.getElementById("anim"), {left: "100px"});
 var dt = document.timeline;
 
 // Test that TimedItem.getPlayer() and Player.timedItem are consistent.
-var player1 = dt.createPlayer(animation);
+var player1 = dt.play(animation);
 checkNotEqual(player1, null, "Player should not be null");
 check(player1.timedItem, animation, "Player.timedItem incorrect");
 check(animation.getPlayer(), player1, "TimedItem.getPlayer() incorrect");
 
-// Test that createPlayer() always returns a new Player.
-var player2 = dt.createPlayer(animation);
+// Test that play() always returns a new Player.
+var player2 = dt.play(animation);
 checkNotEqual(player2, player1,
-    "Repeated calls to createPlayer() should create a new Player");
+    "Repeated calls to play() should create a new Player");
 check(animation.getPlayer(), player2,
-    "Repeated createPlayer(): TimedItem.getPlayer() incorrect");
+    "Repeated play(): TimedItem.getPlayer() incorrect");
 check(player2.timedItem, animation,
-    "Repeated createPlayer(): Player.timedItem incorrect");
+    "Repeated play(): Player.timedItem incorrect");
 check(player2.startTime, player1.startTime,
-    "Repeated createPlayer(): players should have same start time");
+    "Repeated play(): players should have same start time");
 
 // Test explicit setting of Player.timedItem.
 player1.timedItem = animation;
@@ -101,12 +101,12 @@ check(animation2.getPlayer(), null,
     "TimedItem.getPlayer() should be null for leaf");
 
 // Test that TimedItem.getPlayer() remotes to the root of the tree.
-var player3 = dt.createPlayer(parGroup);
+var player3 = dt.play(parGroup);
 check(animation2.getPlayer(), player3, "TimedItem.getPlayer() should remote");
 
-// Test that calling createPlayer() on a TimedItem with a parent results in
+// Test that calling play() on a TimedItem with a parent results in
 // reparenting.
-var player4 = dt.createPlayer(animation2);
+var player4 = dt.play(animation2);
 check(animation2.parentGroup, null, "Animation should be reparented");
 check(parGroup.children.length, 0, "Animation parent should be updated");
 check(player4.timedItem, animation2, "Player should use reparented animation");
