--- a/test/testcases/test-rectangle.html
+++ b/test/testcases/test-rectangle.html
@@ -39,6 +39,6 @@ var anim = {'clip': [
   'rect(0px, 800px, 600px, 0px)'
 ]};
 var timing = 1;
-document.timeline.createPlayer(
+document.timeline.play(
     new Animation(document.querySelector('#test'), anim, timing));
 </script>
