--- a/test/testcases/test-start-time-iterations.html
+++ b/test/testcases/test-start-time-iterations.html
@@ -106,9 +106,9 @@ for (var i = 0; i < directions.length; i++) {
   // its duration and its iteration time jumps, causing the child to start
   // playing part way through the animation.
   var group1 = group(direction);
-  document.timeline.createPlayer(group1);
+  document.timeline.play(group1);
   var group2 = groupWithFixedDuration(direction);
-  document.timeline.createPlayer(group2);
+  document.timeline.play(group2);
   setTimeout(function(container, group1, group2) {
     return function() {
       new Animation(container.getElementsByClassName("a")[0], animation,
