--- a/test/testcases/test-timing-functions.html
+++ b/test/testcases/test-timing-functions.html
@@ -51,12 +51,12 @@ body { margin: 0px; }
 <script src="../../web-animations.js"></script>
 <script>
 
-document.timeline.createPlayer(new Animation(document.querySelector("#a"),
+document.timeline.play(new Animation(document.querySelector("#a"),
     {left: "200px"}, {startDelay: 1, duration: 2}));
 var elems = document.querySelectorAll(".test");
 for (var i = 0; i < elems.length; i++) {
   var element = elems[i];
-  document.timeline.createPlayer(new Animation(element, {left: "200px"},
+  document.timeline.play(new Animation(element, {left: "200px"},
       {startDelay: 1, duration: 2, timingFunction: element.textContent}));
 }
 </script>
