--- a/test/testcases/test-transform-3d.html
+++ b/test/testcases/test-transform-3d.html
@@ -81,7 +81,7 @@ for (var i = 0; i < transformValues.length; i++) {
       div.style.top = y + 'px';
       div.style.left = x + 'px';
       div.textContent = "perspective";
-      document.timeline.createPlayer(new Animation(div, {"-webkit-transform":
+      document.timeline.play(new Animation(div, {"-webkit-transform":
           [transformValues[i][j], transformValues[i][k]]}, 2));
       x += separation_x;
       if (x > max_x) {
