--- a/test/testcases/test-player.html
+++ b/test/testcases/test-player.html
@@ -65,10 +65,10 @@ var checkNotEqual = function(actual, unexpected, failureMessage) {
 var animation = new Animation(document.getElementById("anim"), {left: "100px"});
 var dt = document.timeline;
 
-// Test that TimedItem.getPlayer() and Player.timedItem are consistent.
+// Test that TimedItem.getPlayer() and Player.source are consistent.
 var player1 = dt.play(animation);
 checkNotEqual(player1, null, "Player should not be null");
-check(player1.timedItem, animation, "Player.timedItem incorrect");
+check(player1.source, animation, "Player.source incorrect");
 check(animation.getPlayer(), player1, "TimedItem.getPlayer() incorrect");
 
 // Test that play() always returns a new Player.
@@ -77,19 +77,19 @@ checkNotEqual(player2, player1,
     "Repeated calls to play() should create a new Player");
 check(animation.getPlayer(), player2,
     "Repeated play(): TimedItem.getPlayer() incorrect");
-check(player2.timedItem, animation,
-    "Repeated play(): Player.timedItem incorrect");
+check(player2.source, animation,
+    "Repeated play(): Player.source incorrect");
 check(player2.startTime, player1.startTime,
     "Repeated play(): players should have same start time");
 
-// Test explicit setting of Player.timedItem.
-player1.timedItem = animation;
-check(player2.timedItem, null,
-    "Set Player.timedItem: Old Player.timedItem incorrect");
-check(player1.timedItem, animation,
-    "Set Player.timedItem: New Player.timedItem incorrect");
+// Test explicit setting of Player.source.
+player1.source = animation;
+check(player2.source, null,
+    "Set Player.source: Old Player.source incorrect");
+check(player1.source, animation,
+    "Set Player.source: New Player.source incorrect");
 check(animation.getPlayer(), player1,
-    "Set Player.timedItem: TimedItem.getPlayer() incorrect");
+    "Set Player.source: TimedItem.getPlayer() incorrect");
 
 // Test that TImedItem.getPlayer() gives null on a detached tree.
 var animation2 =
@@ -109,7 +109,7 @@ check(animation2.getPlayer(), player3, "TimedItem.getPlayer() should remote");
 var player4 = dt.play(animation2);
 check(animation2.parentGroup, null, "Animation should be reparented");
 check(parGroup.children.length, 0, "Animation parent should be updated");
-check(player4.timedItem, animation2, "Player should use reparented animation");
+check(player4.source, animation2, "Player should use reparented animation");
 
 // Test that setting a parent on a TimedItem with a Player causes the player to
 // be disconnected.
@@ -118,7 +118,7 @@ check(parGroup.getPlayer(), player3,
     "TimedItem.getPlayer() should be updated for root");
 check(animation2.getPlayer(), player3,
     "TimedItem.getPlayer() should be updated for leaf");
-check(player4.timedItem, null, "Player.timedItem should be updated");
+check(player4.source, null, "Player.source should be updated");
 check(animation2.parentGroup, parGroup,
     "Animation.parentGroup should be updated");
 check(parGroup.children.length, 1, "Animation parent should be updated");
