--- a/test/testcases/test-set-parent.html
+++ b/test/testcases/test-set-parent.html
@@ -125,11 +125,17 @@ check(sibling.startTime, 0.0, "Start time of 'sibling'");
 check(child.startTime, 1.0, "Start time of 'child'");
 
 // Test that setting TimedItem.parentGroup is ignored.
-anim.parentGroup = null;
+child.parentGroup = null;
 check(seqGroup.children.length, 2, "seqGroup.children.length");
 check(seqGroup.children[0], sibling, "First child should be 'sibling'");
 check(seqGroup.children[1], child, "Second child should be 'child'");
 check(sibling.startTime, 0.0, "Start time of 'sibling'");
 check(child.startTime, 1.0, "Start time of 'child'");
+
+// Test that TimedItem.clear() updates both parent and children.
+seqGroup.clear();
+check(seqGroup.children.length, 0, "Parent's children should be cleared");
+check(child.parentGroup, null, "Child's parentGroup should be cleared");
+check(sibling.parentGroup, null, "Sibling's parentGroup should be cleared");
 
 </script>
