--- a/test/example-test2.html
+++ b/test/example-test2.html
@@ -61,7 +61,6 @@ Written By Sarah Heimlich
 <script>
 setupTests();
 var leftDown = new SeqGroup([]);
-leftDown.locallyPaused = true;
 
 var left = new ParGroup([], {}, leftDown);
 var down = new ParGroup([], {}, leftDown);
@@ -74,7 +73,8 @@ new Animation(bottomObject, {left: ["100px", "500px"]}, {duration: 1}, left);
 new Animation(topObject, {top: ["100px", "500px"]}, {duration: 1}, down);
 new Animation(bottomObject, {top: ["100px", "500px"]}, {duration: 1}, down);
 
-leftDown.play();
+document.timeline.play(leftDown);
+
 check(topObject, {"left":"300px"}, 0.5, "The elements have moved left");
 check(topObject, {"top":"300px"}, 1.5, "The elements have moved down");
 check(topObject, {"left":bottomObject, "top":bottomObject}, 0.2, "Objects move together", true);
