--- a/test/testcases/test-transform-units.html
+++ b/test/testcases/test-transform-units.html
@@ -34,6 +34,31 @@ limitations under the License.
 <div></div>
 <script src="../../web-animations.js"></script>
 <script>
+// TODO: refactor into test harness
+function detectFeatures() {
+  var style = document.createElement('style');
+  style.textContent = '' +
+     'dummyRuleForTesting {' +
+     'width: calc(0px);' +
+     'width: -webkit-calc(0px); }';
+  document.head.appendChild(style);
+  var transformCandidates = [
+      'transform',
+      'webkitTransform',
+      'msTransform'
+  ];
+  var transformProperty = transformCandidates.filter(function(property) {
+    return property in style.sheet.cssRules[0].style;
+  })[0];
+  var calcFunction = style.sheet.cssRules[0].style.width.split('(')[0];
+  document.head.removeChild(style);
+  return {
+    transformProperty: transformProperty,
+    calcFunction: calcFunction
+  };
+}
+
+var features = detectFeatures();
 
 var transformValues = [
   ['translate(0px, 0px)', 'translate(10em)', 'translate(10%, 1in)'],
@@ -61,13 +86,13 @@ for (var i = 0; i < transformValues.length; i++) {
       div.className = "expected";
       div.style.top = y + 'px';
       div.style.left = x + 'px';
-      div.style.webkitTransform = transformValues[i][k];
+      div.style[features.transformProperty] = transformValues[i][k];
       toplevel.appendChild(document.createElement("div"));
       var div = toplevel.lastChild;
       div.className = "anim";
       div.style.top = y + 'px';
       div.style.left = x + 'px';
-      document.timeline.play(new Animation(div, {"-webkit-transform":
+      document.timeline.play(new Animation(div, {"transform":
           [transformValues[i][j], transformValues[i][k]]}, 2));
       x += separation_x;
       if (x > max_x) {
