Switch to camel cased property names

--- a/test/testcases/test-color-names.html
+++ b/test/testcases/test-color-names.html
@@ -169,5 +169,5 @@ var colors = [
   'yellowgreen'];
 
 document.timeline.play(new Animation(document.body,
-    {'background-color': colors}, colors.length * 2 / 60));
+    {'backgroundColor': colors}, colors.length * 2 / 60));
 </script>
