--- a/test/testcases/test-font-weight.html
+++ b/test/testcases/test-font-weight.html
@@ -37,5 +37,5 @@ limitations under the License.
 <script src="../../web-animations.js"></script>
 <script>
 document.timeline.play(new Animation(document.querySelector('#test'),
-    {'font-weight': ['100', '900']}, {duration: 1, startDelay: 1}));
+    {'fontWeight': ['100', '900']}, {duration: 1, startDelay: 1}));
 </script>
