--- a/test/testcases/test-integer.html
+++ b/test/testcases/test-integer.html
@@ -44,5 +44,5 @@ for (var i = 0; i < totalWidth; i += width) {
   document.body.appendChild(div);
 }
 document.timeline.play(new Animation(document.querySelector("#test"),
-    {"z-index": [String(startZ), String(endZ)]}, 3));
+    {"zIndex": [String(startZ), String(endZ)]}, 3));
 </script>
