--- a/test/testcases/test-text-shadow.html
+++ b/test/testcases/test-text-shadow.html
@@ -19,5 +19,5 @@ limitations under the License.
 <script src="../../web-animations.js"></script>
 <script>
 document.timeline.play(new Animation(document.body,
-    {'text-shadow': ['100px 100px red, 0px 100px 10px red', '0px 0px']}, 2));
+    {'textShadow': ['100px 100px red, 0px 100px 10px red', '0px 0px']}, 2));
 </script>
