Specify width and height in svg element so that firefox displays test case.

--- a/test/testcases/test-grouped-anim-func.html
+++ b/test/testcases/test-grouped-anim-func.html
@@ -23,7 +23,7 @@ limitations under the License.
   fill: red;
 }
 </style>
-<svg>
+<svg width='800px' height='800px'>
   <rect class="expectation" x="400px" y="200px" width="50px" height="100px">
   </rect>
   <rect class="anim" x="100px" y="10px" width="100px" height="100px">
