--- a/test/new-framework/test-runner.html
+++ b/test/new-framework/test-runner.html
@@ -13,29 +13,7 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<script>
-var tests = [
-  'test-calc.html',
-  'test-color.html',
-  'test-color-names.html',
-  'test-composite-transforms.html',
-  'test-compositor.html',
-  'test-fill-values.html',
-  'test-grouped-anim-func.html',
-  'test-groupings.html',
-  'test-iterations-basic.html',
-  'test-iterations-fill.html',
-  'test-path.html',
-  'test-playback-rate.html',
-  'test-repetition.html',
-  'test-run-fast.html',
-  'test-steping.html',
-  'test-svg-animation.html',
-  'test-text-shadow.html',
-  'test-to-animation.html',
-  'test-visibility.html',
-];
-</script>
+<script src="testcases.js"></script>
 <style>
 iframe {
   width: 800px;
