--- a/test/new-framework/testcases/test-color-names.html
+++ b/test/new-framework/testcases/test-color-names.html
@@ -193,11 +193,11 @@ var colors = [
 setupTests({frameworkTimeout:200000});
 var anim = document.getElementById("victim");
 var displayTime = 0.3;
-document.timeline.play(new Animation(anim, {'background-color': colors},
+document.timeline.play(new Animation(anim, {'backgroundColor': colors},
                      (colors.length - 1) * displayTime));
 
 for(var x in colors){
-  check(anim, {"background-color":colors[x]}, x*displayTime, colors[x]);
+  check(anim, {"backgroundColor":colors[x]}, x*displayTime, colors[x]);
 }
 
 runTests();
