--- a/test/new-framework/testcases/test-color.html
+++ b/test/new-framework/testcases/test-color.html
@@ -80,9 +80,9 @@ Written by Steph McArthur
 <script>
 setupTests();
 
-document.timeline.play(new Animation(document.querySelector("#a"), {"background-color": ["red", "green"]}, 2));
-document.timeline.play(new Animation(document.querySelector("#b"), {"background-color": "rgb(0, 128, 0)"}, 2));
-document.timeline.play(new Animation(document.querySelector("#c"), {"background-color": [{offset: 0.25, value: "rgb(255, 0, 0)"}, {offset: 0.75, value: "rgb(0, 0, 255)"}], operation: "add"}, 2));
+document.timeline.play(new Animation(document.querySelector("#a"), {"backgroundColor": ["red", "green"]}, 2));
+document.timeline.play(new Animation(document.querySelector("#b"), {"backgroundColor": "rgb(0, 128, 0)"}, 2));
+document.timeline.play(new Animation(document.querySelector("#c"), {"backgroundColor": [{offset: 0.25, value: "rgb(255, 0, 0)"}, {offset: 0.75, value: "rgb(0, 0, 255)"}], operation: "add"}, 2));
 
 check(document.querySelector("#a"), {backgroundColor: "green"}, 2, "Is green");
 check(document.querySelector("#a"), {backgroundColor: "red", top: "50px"}, 0, "Is red");
