--- a/test/new-framework/testcases/test-compositor.html
+++ b/test/new-framework/testcases/test-compositor.html
@@ -47,16 +47,16 @@ document.timeline.play(new Animation(rect, {x: ["0px", "400px"]}, 3));
 document.timeline.play(new Animation(rect, {x: ["0px", "200px"], operation: 'add'}, {startDelay: 1, duration: 4}));
 document.timeline.play(new Animation(rect, {x: ["0px", "200px"], operation: 'merge'}, {startDelay: 2, duration: 5}));
 
-document.timeline.play(new Animation(rect2, {"-webkit-transform": ["translate(0px, 0px)", "translate(200px, 200px)"]}, 3));
-document.timeline.play(new Animation(rect2, {"-webkit-transform": ["rotate(0deg) translate(0px, 0px)",
+document.timeline.play(new Animation(rect2, {"transform": ["translate(0px, 0px)", "translate(200px, 200px)"]}, 3));
+document.timeline.play(new Animation(rect2, {"transform": ["rotate(0deg) translate(0px, 0px)",
                                         "rotate(90deg) translate(100px, 0px)"], operation: 'add'}, {startDelay: 1, duration: 4}));
-document.timeline.play(new Animation(rect2, {"-webkit-transform": ["translate(0px, 0px) rotate(0deg) translate(0px, 0px) scale(1, 1)", "translate(0px, 0px) rotate(0deg) translate(0px, 0px) scale(2, 2)"], operation: 'merge'}, {startDelay: 2, duration: 5}));
+document.timeline.play(new Animation(rect2, {"transform": ["translate(0px, 0px) rotate(0deg) translate(0px, 0px) scale(1, 1)", "translate(0px, 0px) rotate(0deg) translate(0px, 0px) scale(2, 2)"], operation: 'merge'}, {startDelay: 2, duration: 5}));
 
 check(rect, {x:"408px"}, 3, "SVG check");
 check(rect, {x:"200px"}, 7, "SVG check 2");
 
-check(rect2, {"-webkit-transform": "translate(160px, 160px) rotate(36deg) translate(40px, 0px) scale(1.04)"}, 3, "SVG rect2");
-check(rect2, {"-webkit-transform": "translate(0px, 0px) rotate(0deg) translate(0px, 0px) scale(2)"}, 7, "SVG rect2 2");
+check(rect2, {"transform": "translate(160px, 160px) rotate(36deg) translate(40px, 0px) scale(1.04)"}, 3, "SVG rect2");
+check(rect2, {"transform": "translate(0px, 0px) rotate(0deg) translate(0px, 0px) scale(2)"}, 7, "SVG rect2 2");
 
 runTests();
 </script>
