--- a/test/new-framework/testcases/test-text-shadow.html
+++ b/test/new-framework/testcases/test-text-shadow.html
@@ -49,11 +49,11 @@ limitations under the License.
 setupTests();
 var anim = document.getElementById("victim");
 document.timeline.play(new Animation(anim,
-    {'text-shadow': ['100px 100px red, 0px 100px 5px red', '0px 0px']}, {duration:2, startDelay:1}));
+    {'textShadow': ['100px 100px red, 0px 100px 5px red', '0px 0px']}, {duration:2, startDelay:1}));
 
 // There's a strange css feature which sometimes will show the color name not the rbga.
 // The quick solution is to pass in rgba instead of color name
-check(anim, {'text-shadow': 'rgb(255, 0, 0) 100px 100px 0px, rgb(255, 0, 0) 0px 100px 5px'}, 1, "start check");
-check(anim, {'text-shadow': '0px 0px'}, 3, "end check");
+check(anim, {'textShadow': 'rgb(255, 0, 0) 100px 100px 0px, rgb(255, 0, 0) 0px 100px 5px'}, 1, "start check");
+check(anim, {'textShadow': '0px 0px'}, 3, "end check");
 runTests();
 </script>
