--- a/test/new-framework/testcases/test-path.html
+++ b/test/new-framework/testcases/test-path.html
@@ -74,7 +74,7 @@ height: 500px;
 <script>
 setupTests();
 
-var animFunc = new PathAnimationFunction(
+var animFunc = new PathAnimationEffect(
     document.querySelector('#path1'));
 animFunc.rotate = true;
 
@@ -82,7 +82,7 @@ document.timeline.play(new Animation(document.querySelector("#anim1"),
     animFunc,
     {duration: 2, iterationCount: 2}));
 
-var animFunc2 = new PathAnimationFunction(
+var animFunc2 = new PathAnimationEffect(
     document.querySelector('#path2'));
 animFunc2.rotate = true;
 
