--- a/test/testcases/test-player.html
+++ b/test/testcases/test-player.html
@@ -65,8 +65,11 @@ var checkNotEqual = function(actual, unexpected, failureMessage) {
 var animation = new Animation(document.getElementById("anim"), {left: "100px"});
 var dt = document.timeline;
 
-// Test that TimedItem.getPlayer() and Player.source are consistent.
+// Test Player.timeline.
 var player1 = dt.play(animation);
+check(player1.timeline, document.timeline, "Player.timeline incorrect");
+
+// Test that TimedItem.getPlayer() and Player.source are consistent.
 checkNotEqual(player1, null, "Player should not be null");
 check(player1.source, animation, "Player.source incorrect");
 check(animation.getPlayer(), player1, "TimedItem.getPlayer() incorrect");
