Fix calculation of Player.currentTime when Timeline is not started

--- a/test/testcases/test-player.html
+++ b/test/testcases/test-player.html
@@ -135,4 +135,28 @@ check(document.timeline.play(animation).currentTime, 0,
 check(document.timeline.play(animation).startTime, 0,
     "startTime should be zero before Timeline starts");
 
+// Test that setting currentTime has no effect until the timeline starts.
+var player5 = dt.play(animation);
+player5.currentTime = 42;
+check(player5.currentTime, 0,
+    "currentTime should always be zero before Timeline starts");
+addEventListener('load', function() {
+  setTimeout(function() {
+    check(player5.currentTime > 42, true,
+        "updates to currentTime should take effect after Timeline starts");
+  }, 0);
+});
+
+// Test that setting currentTime has no effect until the timeline starts.
+var player6 = dt.play(animation);
+player6.startTime = 42;
+check(player6.currentTime, 0,
+    "currentTime should always be zero before Timeline starts");
+addEventListener('load', function() {
+  setTimeout(function() {
+    check(player6.currentTime < -41, true,
+        "updates to startTime should take effect after Timeline starts");
+  }, 0);
+});
+
 </script>
